fixed layout issue, added back banner on top of the panel

--- a/css/leftSection.css
+++ b/css/leftSection.css
@@ -3,18 +3,13 @@
 #result-placeholder {
     text-align: center;
     justify-content: center;
-    margin-top: 18px;
-}
-
-#banner-container {
     width: 100%;
     padding: 15px;
     text-align: center;
     height: 70px;
-    margin-top: 160px;
+    margin-top: 100px;
 }
-
-#banner-title {
+#placeholder-title {
     color: #6600cc;
     padding: 10px;
     font-size: 5em;
@@ -48,8 +43,7 @@
 }
 
 #search-bar {
-    padding: 5px;
-    height: 20px;
+    height: 28px;
     width: 250px;
     border: 4px solid rgb(117, 114, 150);
     border-radius: 2px;
@@ -116,7 +110,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 665px;
+    height: 680px;
     width: 108%;
     border-bottom-left-radius: 5px;
 }
