--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,34 @@ body {
 }
 
 #panel-container {
-    background: #b3b4bf;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #eef2f3, #b3b4bf);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #eef2f3, #b3b4bf);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #b3b4bf;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #eef2f3, #b3b4bf);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #eef2f3, #b3b4bf); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     border-radius: 5px;
     -webkit-box-shadow: 5px 11px 25px 5px #3d3d3d;
     -moz-box-shadow: 5px 11px 25px 5px #3d3d3d;
     box-shadow: 5px 11px 25px 5px #3d3d3d;
-    height: 720px;
+    height: 840px;
     width: 800px;
     margin: 25px auto;
     display: flex;
     flex-wrap: wrap;
-    padding-top: 50px;
+}
+
+#banner-container {
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+    height: 70px;
+}
+
+#banner-title {
+    color: #6600cc;
+    font-size: 3em;
+    font-weight: 900;
+    text-decoration: none;
+    text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black, 5px 4px #333333;
 }
 
 #left-section {
